5.1.2 -> 5.1.3:
    - jbj: debuginfo: refactor 2 existing upgrade policy rules before
        adding a new contextually sensitive rule for -debuginfo packages.
    - jbj: add %_build_iconsize macro to permit configuration.
    - jbj: trash-and-restore macro config for multiple CLI arg builds.
    - jbj: rpmrepo: correct requiressqlentry tag name typo.
    - jbj: fix: handle '%{arch}\' with \ at end-of-string correctly.
    - jbj: tests: verify ref/* data using rpmdigest/rpmmtree.
    - jbj: move rpmdigest/rpmmtree/rpmrepo back to tools/ for installation.
    - jbj: tests: verify rpmrepo XML spewage using popt-1.14.
    - jbj: tests: verify XML/YAML markup queries using popt-1.14.
    - jbj: tests: download popt-1.14 packages for use in tests.
    - jbj: yaml: fix: single element string arrays had extra "- ".
    - jbj: yaml: remove the hotwired hack for SRPM dirnames indentation.
    - jbj: backport --queryformat pipeline syntax from HEAD.
    - jbj: update Russian PO file (from Translation Project).
    - jbj: upgrade to db-4.7.25.
    - jbj: rpmdb: fix: limit RUNRECOVERY attempts, not every lazy open.
    - jbj: backport assorted rpmio changes from HEAD to stay in sync.
    - jbj: make sure the open path is set when using [bgl]zdOpen vector too.
    - jbj: lzdio: rework the layering to be more similar to gzdio/bzdio.
    - jbj: rpmrepo: fix: --lzma segfault, lzdFdopen was not saving path.
    - jbj: rpmrepo: add baseurl to the repo markup.
    - jbj: rpmrepo: populate sqlite schema with PACKAGESIZE and PACKAGEDIGEST.
    - jbj: simple parameterized namespace URI for Pkgid/Hdrid UUID generation.
    - jbj: rpmrepo: compute digests for both compressed & uncompressed
	repository markup components.
    - jbj: update sv.po from the Translation Project.
    - jbj: add SOURCERPM name at end-of-parse for --specfile queries and errmsg.
    - jbj: splint: annotate argvAppend differently.
    - jbj: add _fdopen to FDIO_t, expose fdbg(), make lzdio.c standalone.