@@ -40,6 +40,7 @@ LIBRPMDB_0
     headerGetDigest;
     headerSetDigest;
     headerGetInstance;
+    headerSetInstance;
     headerGetMagic;
     headerGetOrigin;
     headerSetOrigin;
@@ -85,6 +86,7 @@ LIBRPMDB_0
     rpmdbClose;
     rpmdbBlockDBI;
     rpmdbCloseDBI;
+    rpmdbCount;
     rpmdbCountPackages;
     rpmdbFindFpList;
     rpmdbFreeIterator;
