@@ -1574,8 +1574,7 @@ if (rc == 0)
     return 0;
 }
 
-/* XXX python/upgrade.c, install.c, uninstall.c */
-int rpmdbCountPackages(rpmdb db, const char * name)
+int rpmdbCount(rpmdb db, rpmTag tag, const void * keyp, size_t keylen)
 {
 DBC * dbcursor = NULL;
 DBT * key = alloca(sizeof(*key));
@@ -1584,20 +1583,23 @@ DBT * data = alloca(sizeof(*data));
     int rc;
     int xx;
 
-    if (db == NULL)
+    if (db == NULL || keyp == NULL)
 	return 0;
 
 memset(key, 0, sizeof(*key));
 memset(data, 0, sizeof(*data));
 
-    dbi = dbiOpen(db, RPMTAG_NAME, 0);
+    dbi = dbiOpen(db, tag, 0);
     if (dbi == NULL)
 	return 0;
 
+    if (keylen == 0)
+	keylen = strlen(keyp);
+
 /*@-temptrans@*/
-key->data = (void *) name;
+key->data = (void *) keyp;
 /*@=temptrans@*/
-key->size = (UINT32_T) strlen(name);
+key->size = (UINT32_T) keylen;
 
     xx = dbiCopen(dbi, dbi->dbi_txnid, &dbcursor, 0);
     rc = dbiGet(dbi, dbcursor, key, data, DB_SET);
@@ -1632,6 +1634,12 @@ key->size = (UINT32_T) strlen(name);
 #endif
 
     return rc;
+}
+
+/* XXX python/upgrade.c, install.c, uninstall.c */
+int rpmdbCountPackages(rpmdb db, const char * name)
+{
+    return rpmdbCount(db, RPMTAG_NAME, name, 0);
 }
 
 /**
@@ -3827,7 +3835,10 @@ static int rpmdbMoveDatabase(const char * prefix,
     const char * ofn, * nfn;
     int rc = 0;
     int xx;
+    int selinux = is_selinux_enabled() > 0 && (matchpathcon_init(NULL) != -1);
+    sigset_t sigMask;
  
+    blockSignals(NULL, &sigMask);
     switch (_olddbapi) {
     default:
     case 4:
@@ -3877,6 +3888,8 @@ static int rpmdbMoveDatabase(const char * prefix,
 		rc = 1;
 		goto bottom;
 	    }
+
+	    /* Restore uid/gid/mode/mtime/security context if possible. */
 	    xx = Chown(nfn, nst->st_uid, nst->st_gid);
 	    xx = Chmod(nfn, (nst->st_mode & 07777));
 	    {	struct utimbuf stamp;
@@ -3884,6 +3897,14 @@ static int rpmdbMoveDatabase(const char * prefix,
 		stamp.modtime = nst->st_mtime;
 		xx = Utime(nfn, &stamp);
 	    }
+	    if (selinux) {
+		security_context_t scon = NULL;
+		if (matchpathcon(nfn, nst->st_mode, &scon) != -1)
+		    xx = setfilecon(nfn, scon);
+		if (scon != NULL)
+		    freecon(scon);
+	    }
+
 bottom:
 	    ofn = _free(ofn);
 	    nfn = _free(nfn);
@@ -3914,6 +3935,10 @@ bottom:
     case 0:
 	break;
     }
+    unblockSignals(NULL, &sigMask);
+
+    if (selinux)
+	matchpathcon_fini();
     return rc;
 }
 
